@@ -6,6 +6,7 @@ ImpressCMS ChangeLog
 '''Added'''
 * agree box before upgrading to make sure of a backup. (stranger)
 * added password can't contain username to pass check in admin edit user form. (vaughan)
+* default template form usable by core feature or any modules - system_default_form.html (malanciault)
 
 '''Improved'''
 * Improved how we use rtl in system. (stranger/real_therplima)
